--- a/view/index.html
+++ b/view/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="./css/style.css"  rel="stylesheet" type="text/css"/>
-  </head>
+
   <body>
     <div class="margin20 textCenter fs20">Phone Directory</div>
     <div class="textCenter">
@@ -12,42 +10,107 @@
           <input type="text" id="name" value="" placeholder="Contact Name"/>
           <input type="number" maxlength="10" id="mobile" value="" placeholder="Mobile Number"/>
           <input type="email" id="email" value="" placeholder="Email"/>
-          <input type="submit" class="btn" id="submit" value="Add Contact"/>
+          <input type="submit" class="btn" id="submit" onclick="validateContact();" value="Add Contact"/>
           <div id="error" class="dn error padT10 textCenter">Invalid Input!</div>
           </div>
         </div>
       </div>
-      <div class="marginT40">
-        <span>Search contact by Mobile No:</span>
-        <input type="text" id="search" value=""/>
-      </div>
       <div class="marginT40 padL10 tab cursorPtr" id="contactsSummary">Contacts Summary</div>
       <div id="contactSummary" class="contactSummary">
         <table id="summaryTable">
-          <thead>
-            <tr>
-              <th id="nameColumn">Name</th>
-              <th>Mobile</th> 
-              <th>Email</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Admin</td>
-              <td>9999999999</td> 
-              <td>admin@xyzcompany.com</td>
-            </tr>
-          </tbody>
-        </table>
-        <div id="noResult" class="noResult dn">No Results Found</div>
+            <thead>
+              <tr>
+                <th id="nameColumn">Name</th>
+                <th>Mobile</th> 
+                <th>Email</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td></td>
+                  <td></td> 
+                  <td></td>
+                </tr>
+            </tbody>
+          </table>
+          <div id="noResult" class="noResult dn">No Results Found</div>
       </div>
     </div>
   <script>
+    document.getElementById("error").style.display = "none";
+	var table = document.getElementById("summaryTable");
+	var array = [];
     window.contactsList = [{
       name: 'Admin',
       mobile: '9999999999',
       email: 'admin@xyzcompany.com'
     }];
+	function validateEmail() {
+	var text = document.getElementById("email");
+	var email = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+    if (text.value.match(email))
+    {
+    return (true)
+    }
+    return (false)
+	}
+	
+	function validatePhone() {
+	var text = document.getElementById("mobile");
+	var phoneno = /^\d{10}$/;
+	if(text.value.match(phoneno)) {
+    return true;
+        }
+    else
+        {
+        return false;
+        }
+    }
+	
+    function validateName() {
+	var text = document.getElementById("name");
+    var nameRegex = /^[a-zA-Z]{0,20}(?: [a-zA-Z]+){0,2}$/;
+    if (text.value.match(nameRegex)){
+	return true;
+	}
+	else {
+	return false;
+	}
+    }
+	
+	function validateContact(){
+	if(validateName()) {
+	if(validatePhone()) {
+	if(validateEmail()) {
+	populate();
+	return true;
+	}
+	}
+	}
+	document.getElementById("error").style.display = "block"
+	return false;
+	}
+	
+	function populate() {
+	 document.getElementById("noResult").style.display = "none"
+	 table.innerHTML = "";
+	 array.push([document.getElementById("name").value, document.getElementById("mobile").value, document.getElementById("email").value]);
+	 for(var i = 0; i < array.length; i++)
+           {
+               var newRow = table.insertRow(table.length);
+               for(var j = 0; j < array[i].length; j++)
+               {
+
+                   var cell = newRow.insertCell(j);
+
+                   cell.innerHTML = array[i][j];
+               }
+           }
+	}
+	
   </script>
-  <script src="./js/script.js" type="text/javascript"></script>
+  
+  
+  
+  </body>
 </html>
